# r2k9_sentry

./: CMakeLists.txt  README.md  manifest.xml  package.xml  r2k9_sentry.cpp  requirements.txt  setup.py  utils.cpp  utils.h
launch/: sentry.launch
msg/: DetectedObject.msg  ObjectDetection.msg  TrainingReady.msg  TrainingUpdate.msg
plugins/: nodelet_plugins.xml
scripts/: memory.py  r2k9_tracker.py  r2k9_trainer.py
