<?xml version="1.0"?>
<package>
  <name>r2k9_sentry</name>
  <version>0.0.1</version>
  <description>
    R2K9 robot
  </description>
  <maintainer email="steve@virtigex.com">
    Steve Austin
  </maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
  <build_depend>realsense_person</build_depend>
  <run_depend>realsense_person</run_depend>
  <build_depend>kobuki_msgs</build_depend>
  <run_depend>kobuki_msgs</run_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>nodelet</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>yocs_controllers</build_depend>
  <run_depend>yocs_controllers</run_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
